# secure_hardware_extension_pp

./: CMakeLists.txt  README.md  autosar_key_slots.h  crypto_common.cpp  crypto_common.h  key_slots_base.h  memory_update_info.cpp  memory_update_info.h  memory_update_messages.cpp  memory_update_messages.h  memory_update_protocol.cpp  memory_update_protocol.h  secure_flags.cpp  secure_flags.h  she_bytes.cpp  she_bytes.h  she_constants.cpp  she_constants.h  she_descriptor.cpp  she_descriptor.h  she_integer.h  she_key_slots.h  test_program.cpp
